# 2022-bilbao-ODD

./: .gitignore  example_usage_outside_package.py  pyproject.toml  setup.cfg
brewing/: brew_potions.py  example_usage_within_package.py  inspection.py  potion_class.py
exercises/: Exercise 1 Importing.md  Exercise 2 Editable Installation.md  Exercise 3 Workflow.md  Exercise 4 Virtual Environments.md  Exercise 5 Documentation.md  Exercise 5 Virtual Environments.md
materials/: timings.md
scripts_and_notebooks/: example_usage_different_folder.py
